# MyFirstSlicerExtension

./: CMakeLists.txt
LineIntensityProfile/: LineIntensityProfile.py~
